assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
}

/* .header *, 
.header {
    border: 1px dotted black; 
} */

.body {
    display: flex;
    flex-direction: column;
    min-height: 100svh;
    border: 1px dotted black;
    justify-content:space-between;
}

.header {
    display: flex;
    align-items: center;
    padding: 0.3rem 1.5rem;
    justify-content:space-between;
    background-color: rgba(94, 70, 191, 0.697);
    transition-duration: 300ms;
}

.left {
    align-items: center;
    display: flex;
    gap: 0.3rem;

.logo {
    max-width: 3rem;
}

.company {
    color: rgb(119, 0, 119);
}
}

.right {
    display: flex;
    gap: 0.5rem;
}

.btn {
    background: #36269da8;
    background: linear-gradient(90deg,
    rgba(36, 0, 32, 0.099) 0%
    rgba(47, 15, 43, 0.163) 35%
    rgba(70, 23, 65, 0.536) 100%
    );
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;  

   &:hover {
    transform: translateX(2.6px) translateY(5.1px);
    box-shadow:rgba(0, 0, 0, 0.3) 0 0 0, rgba(0, 0, 0, 0.22) 0px 15px 12px;
      }

    font-size: 1.3rem;
    padding: 0.2rem 1rem;
    border-radius: 8px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color:rgba(94, 70, 191, 0.697);
    padding: 0.5rem 1rem;
}

.one {
    background-color: rgb(174, 43, 43);
}

.company {
    color:rgb(119, 0, 119);
}

.right {
    display: flex;
    align-items: center;
    justify-content: center;
}

